[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Apple.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Comic_CAT.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/eat.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/crawl.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Tail" type="Node2D" parent="."]

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="CrawlSound" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( 32, 32 )
stream = ExtResource( 6 )
volume_db = -20.371

[node name="EatSound" type="AudioStreamPlayer2D" parent="Player"]
position = Vector2( 32, 32 )
stream = ExtResource( 5 )
volume_db = -5.0
area_mask = 0

[node name="Apple" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 0 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 613.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 1 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}
